crates/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__import_stmt_recovery_0.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"import\"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Import(
                ImportStmt {
                    path: Node {
                        node: "",
                        filename: "",
                        line: 1,
                        column: 6,
                        end_line: 1,
                        end_column: 6,
                    },
                    rawpath: "",
                    name: "",
                    asname: None,
                    pkg_name: "",
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 6,
        },
    ],
    comments: [],
}
