crates/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__import_stmt_recovery_5.snap
---
source: parser/src/tests/error_recovery.rs
expression: "crate::tests::parsing_module_string(r#\"import pkg_path as \"#)"
---
Module {
    filename: "",
    doc: None,
    body: [
        Node {
            node: Import(
                ImportStmt {
                    path: Node {
                        node: "pkg_path",
                        filename: "",
                        line: 1,
                        column: 7,
                        end_line: 1,
                        end_column: 15,
                    },
                    rawpath: "pkg_path",
                    name: "",
                    asname: Some(
                        Node {
                            node: "",
                            filename: "",
                            line: 1,
                            column: 19,
                            end_line: 1,
                            end_column: 19,
                        },
                    ),
                    pkg_name: "",
                },
            ),
            filename: "",
            line: 1,
            column: 0,
            end_line: 1,
            end_column: 18,
        },
    ],
    comments: [],
}
