crates/parser/src/tests/snapshots/kclvm_parser__tests__error_recovery__line_continue_recovery_1.snap
---
source: parser/src/tests/error_recovery.rs
assertion_line: 24
expression: "crate::tests::parsing_expr_string(\"'abc\\\\ \\ndef\")"
---
Node {
    node: StringLit(
        StringLit {
            is_long_string: false,
            raw_value: "'abc\\ ",
            value: "abc\\ ",
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 6,
}

